--- a/games.html
+++ b/games.html
@@ -3,6 +3,7 @@
 
 <head>
     <!-- Required meta tags -->
+    <meta name="description" content="MUNNUO Games Studio game catalog can be found here. Browse all game titles developed by Munnuo.">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>Munnuo Games</title>
@@ -64,7 +65,7 @@
                                         <a class="nav-link" href="index.html">Home</a>
                                     </li>
                                     <li class="nav-item">
-                                        <a class="nav-link" href="fighter.html">Games</a>
+                                        <a class="nav-link" href="games.html">Games</a>
                                     </li>
                                     <li class="nav-item">
                                         <a class="nav-link" href="team.html">team</a>
@@ -261,7 +262,7 @@
                             <div class="single_footer_part">
                                 <h4>Navigate</h4>
                                 <ul class="list-unstyled">
-                                    <li><a href="fighter.html">Games</a></li>
+                                    <li><a href="games.html">Games</a></li>
                                     <li><a href="">Careers</a></li>
                                     <li><a href="about.html">About</a></li>
                                     <li><a href="terms&conditions.html">Terms & Conditions</a></li>
