--- a/contact.html
+++ b/contact.html
@@ -108,7 +108,7 @@
   <!-- breadcrumb start-->
 
   <!-- ================ contact section start ================= -->
-  <section class="contact-section section_padding">
+  <section class="contact-section contact-form-padding">
     <div class="container" style="padding-left: 5%; padding-right: 5%;">
       <div class="row">
         <div class="col-12">
