--- a/blog.html
+++ b/blog.html
@@ -46,7 +46,7 @@
 
 <body>
     <!--::header part start::-->
-        <header class="main_menu single_page_menu" style="padding-left: 15%; padding-right: 15%;">
+        <header class="main_menu single_page_menu">
             <div class="container">
                 <div class="row align-items-center">
                     <div class="col-lg-12">
