--- a/team.html
+++ b/team.html
@@ -47,7 +47,7 @@
 <body>
     <div class="body_bg">
         <!--::header part start::-->
-        <header class="main_menu single_page_menu" style="padding-left: 15%; padding-right: 15%;">
+        <header class="main_menu single_page_menu">
             <div class="container">
                 <div class="row align-items-center">
                     <div class="col-lg-12">
