--- a/terms&conditions.html
+++ b/terms&conditions.html
@@ -127,7 +127,7 @@
         Link to Terms and Conditions of third-party service providers used by the app
         </p>
         
-        <div class="col-sm-6 col-lg-3">
+        <div class="col-sm-6 col-lg-3" style="margin-top: 2%; margin-bottom: 2%;">
             <div class="single_footer_part">
                 <ul class="list-unstyled" style="color: aliceblue;">
                     <li><a href="https://policies.google.com/terms">Google Play Services</a></li>
@@ -137,7 +137,6 @@
                 </ul>
             </div>
         </div>
-        <br>
         <p>You should be aware that there are certain things that MUNNUO will not take responsibility for. Certain functions of the app will require the app to have an active internet connection. The connection can be Wi-Fi or provided by your mobile network provider, but MUNNUO cannot take responsibility for the app not working at full functionality if you don’t have access to Wi-Fi, and you don’t have any of your data allowance left.
         </p>
  
