--- a/privacypolicy.html
+++ b/privacypolicy.html
@@ -186,8 +186,9 @@
   <!-- ================ privacy policy section end ================= -->
 
   <!--::footer_part start::-->
-  <footer class="footer_part"  style="padding-left: 15%; padding-right: 15%;">
-    <div class="footer_top">
+  <section style="padding-top: 10%;">
+  <footer class="footer_part">
+    <div class="footer_top" style="padding-left: 15%; padding-right: 15%;">
       <div class="container">
         <div class="row">
           <div class="col-sm-6 col-lg-3">
@@ -254,20 +255,12 @@
               </P>
             </div>
           </div>
-          <div class="col-lg-4">
-            <div class="footer_icon social_icon">
-              <ul class="list-unstyled">
-                <li><a href="#" class="single_social_icon"><i class="fab fa-facebook-f"></i></a></li>
-                <li><a href="#" class="single_social_icon"><i class="fab fa-twitter"></i></a></li>
-                <li><a href="#" class="single_social_icon"><i class="fas fa-globe"></i></a></li>
-                <li><a href="#" class="single_social_icon"><i class="fab fa-behance"></i></a></li>
-              </ul>
-            </div>
-          </div>
+         
         </div>
       </div>
     </div>
   </footer>
+  </section>
   <!--::footer_part end::-->
 
   <!-- jquery plugins here-->
