--- a/privacypolicy.html
+++ b/privacypolicy.html
@@ -244,7 +244,7 @@
         </div>
       </div>
     </div>
-    <div class="copygight_text">
+    <div class="copygight_text" style="padding-left: 5%; padding-right: 5%;">
       <div class="container">
         <div class="row align-items-center">
           <div class="col-lg-8">
