--- a/refundpolicy.html
+++ b/refundpolicy.html
@@ -98,42 +98,110 @@
   </section>
   <!-- breadcrumb start-->
 
-  <!-- ================ Refund section start ================= -->
-  <section class="contact-section section_padding">
+  <!-- ================ Refund Policy Section start ================= -->
+  <section class="contact-section" style = "margin-top: 4%;">
     <div class="container">
       <div class="d-none d-sm-block mb-5 pb-4" style="padding-left: 15%; padding-right: 15%;">
-        <h2>Returns</h2>
-        <br>
-        <h3>What’s your return policy?</h3>
-        <p> We don’t offer returns and exchanges, but if there’s something wrong with your order, please let
-
-            us know by contacting us at support@munnuo.com
+        <h2 style="text-align: center; margin-bottom: 2%;">Refund Policy for Xbox and Mobile Games</h2>
+        <p style="font-size: medium; margin-bottom: 3%;">
+            We strive to ensure you have a great gaming experience. If you're not satisfied with your purchase on Xbox or mobile platforms, please review the refund guidelines below based on the platform used.
+            
         </p>
         <br>
-        <h3>Do you offer refunds?</h3>
-        <p>Refunds are only offered to customers that receive the wrong items or damaged items. If any of
+        <br>
+        <h2>Xbox Games (Microsoft Store)</h2>
+        <br>
+        <h4>Eligibility for Refunds:</h4>
+        <p>
+            Refunds for Xbox games must be requested within 14 days of purchase.
 
-            these apply, please contact us at support@munnuo.com with photos of wrong/damaged
+            The game must have been played for less than 2 hours total.
 
-            items and we’ll sort that out for you.
-            Can I exchange an item for a different size/color?
+            You must not have already downloaded and launched large portions of the content (e.g., story mode, DLC).
 
-            At this time, we don't offer exchanges. If you’re unsure which size would fit better, check out our
+            The request must be made through your Microsoft account.
+        </p>
+        <br>
+        <h4>Ineligible for Refunds:</h4>
+        <p> Games bought as part of a bundle or discounted promotional offer may be non-refundable.
 
-            sizing charts—we have one for every item listed on our store, in the product description section.
+            Consumable content (virtual currency, add-ons, etc.) is non-refundable once used.
 
-            Though rare, it's possible that an item you ordered was mislabeled. If that’s the case, please let
+            Refunds are not guaranteed for games purchased more than once or via gifting.
+        </p>
+        <br>
+        <h4>How to Request a Refund:</h4>
+        <p> Visit the Microsoft Refund Page: https://support.xbox.com
 
-            us know at support@munnuo.com within a week after receiving your order. Include your
+            Sign in with your Microsoft account.
 
-            order number and photos of the mislabeled item, and we’ll send you a new one, or issue a
+            Navigate to Order History, locate the game, and click Request a Refund.
 
-            refund!
+            Provide a brief explanation and submit your request.
+
+            Microsoft will review your request and respond within 72 hours.
+        </p>
+        <br>
+        <br>
+        <br>
+        <br>
+        <h2>Mobile Games (iOS & Android)</h2>
+        <br>
+        <h3>Google Play (Android)</h3>
+        <br>
+        <h4>Eligibility for Refunds:</h4>
+        <p>
+            Refund requests must be made within 48 hours of purchase for most games and in-app purchases.
+
+            After 48 hours, refunds are at Google's discretion or must be requested from the developer (if eligible).
+        </p>
+        <br>
+        <h4>How to Request a Refund:</h4>
+        <p>
+            Open the Google Play Store.
+
+            Tap your profile > Payments & subscriptions > Budget & history.
+
+            Locate the item and tap Request a Refund.
+
+            Alternatively, visit: https://play.google.com/store/account
+        </p>
+        <br>
+        <br>
+        <h3>Apple App Store (iOS)</h3>
+        <br>
+        <h4>Eligibility for Refunds:</h4>
+        <p> Refunds are handled directly by Apple.
+
+            You must request a refund within a reasonable time frame, typically 48 hours, but Apple may grant exceptions.
+        </p>
+        <br>
+        <h4>How to Request a Refund:</h4>
+        <p>
+          Go to https://reportaproblem.apple.com
+
+          Sign in with your Apple ID.
+
+          Select the item, choose a reason, and submit your request.
+
+          Apple reviews requests individually and usually responds within a few days.
+        </p>
+        <br>
+        <br>
+        <br>
+        <br>
+        <h3>Important Notes</h3>
+        <p>
+          We do not control refund approvals on Xbox or mobile platforms.
+
+          Refunds are subject to Microsoft’s, Google’s, or Apple’s policies and discretion.
+
+          If your refund is denied or you're experiencing technical issues, contact our support team at contact@munnuo.com and we’ll do our best to help.
         </p>
       </div>
     </div>
-    </section>
-  <!-- ================ contact section end ================= -->
+  </section>
+  <!-- ================ Refund Policy Section end ================= -->
 
   <!--::footer_part start::-->
 <footer class="footer_part">
