--- a/contact.html
+++ b/contact.html
@@ -149,14 +149,14 @@
               <h3>Chicago, Illinois</h3>
               <p>Chicago, IL 60653</p>
             </div>
-          </div>
+          </div> <!----
           <div class="media contact-info">
             <span class="contact-info__icon"><i class="ti-tablet"></i></span>
             <div class="media-body">
               <h3>312 722 0338</h3>
               <p>Mon to Fri 9am to 6pm</p>
             </div>
-          </div>
+          </div> -->
           <div class="media contact-info">
             <span class="contact-info__icon"><i class="ti-email"></i></span>
             <div class="media-body">
